syntax = "proto3";

message Pattern {
  string src_id = 1;
  string dst_id = 2;

  enum RelationshipType {
    PATH = 0;
    EDGE = 1;
  }
  RelationshipType rel_typ = 3;
  string rel_id = 4;
}

message Filter {
  // id of an edge or node
  string id = 1;
  repeated string properties = 2;
  oneof value_oneof {
    uint32 u32 = 3;
    string str = 4;
  }
}

message Action {
  // Only supports return action
  // id of an edge or node
  string id = 1;
  repeated string properties = 2;
}

message Program {
  repeated Pattern patterns = 1;
  repeated Filter filters = 2;
  repeated Action actions = 3;
}